assets/css/style.css
/* ... */
@media screen and (max-width: 370px) {
  #exampleModal .msoretirepop_p1 {
    margin-top: 0;
  }
}

@media screen and (max-width: 370px) and (min-width: 320px) {
  #exampleModal .msoretirepop_p2_s5_box .dropdown button,
  #exampleModal .msoretirepop_p2_s5_box input {
    font-size: 13px;
    width: 100%;
  }
}

.withdrawalmony_box2 {
  border: 1px solid #01c58d;
}

.planyy_hed_p3_s1 {
  margin-top: 14px;
}

@media screen and (max-width: 1023px) {
  .stepsidemenu_box .planyy_hed_p3 {
    margin-right: 20px;
  }

  .stepsidemenu_box .planyy_hed_p3_s2 h5 {
    margin-top: 27px;
  }
}
/* 
@media screen and (max-width: 575px) {
  
}
  .stepsidemenu_p1 #progressbar.xtmclass_ul {

  } */
@media screen and (min-width: 1024px) {
  .planyy_hed_p3_s2 h5 {
    margin-top: 29px;
  }
}
@media screen and (max-width: 1919px) {
  .planyy_hed_p3 {
    margin-top: 12px;
  }
}

@media screen and (min-width: 1920px) {
  .planyy_hed_p3 {
    margin-top: 22px;
  }
}

@media screen and (max-width: 1919px) and (min-width: 1366px) {
  .planyybody.sidebaractive .slider_text_p1 h3 {
    line-height: 44px;
  }
}

@media screen and (max-width: 768px) and (min-width: 576px) {
  .slider_text_p1 h2 {
    line-height: 74px;
  }
}

.planyybody .slider_text_p1 h2 {
  line-height: 1.5 !important;
}

.slider_text_p1 h3 {
  line-height: 1 !important;
}

.slider_text_cont {
  top: 45%;
}

.slider_text_cont_p1 {
  margin-top: 0;
}

